<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/games"
        android:title="@string/inicio" />
    <item
        android:id="@+id/jogos"
        android:title="@string/jogos">
        <menu>
            <group android:id="@+id/Ps">
                <item
                    android:id="@+id/ps4"
                    android:title="@string/playstation_4" />
                <item
                    android:id="@+id/ps5"
                    android:title="@string/playstation_5" />
            </group>
            <group android:id="@+id/Xbox">
                <item
                    android:id="@+id/Xbox1"
                    android:title="@string/xbox_one" />
                <item
                    android:id="@+id/XboxS"
                    android:title="@string/itxbox_series" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/aluguel"
        android:title="@string/aluguel">
        <menu>
            <group android:id="@+id/primePs">
                <item
                    android:id="@+id/primePs4"
                    android:title="@string/pime_ps4" />
                <item
                    android:id="@+id/primePs5"
                    android:title="@string/prime_ps5" />
            </group>
            <group android:id="@+id/primeXbox">
                <item
                    android:id="@+id/primeXboxOne"
                    android:title="@string/prime_xbox_one" />
                <item
                    android:id="@+id/primeXboxSeries"
                    android:title="@string/prime_xbox_series" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/sobre"
        android:title="@string/sobre" />
</menu>